nopenopenope
I returned to Java 8. The Java 9 javapackager just wasn't working. I
feel that I could probably get it to package properly if I kept at it,
but I don't think it's worth it; I don't even know if anyone has Java 9
on their computer, given how the java website still has Java 8 all over
the front page for some reason. The bigger display did start to grow on
me, though I have a feeling that was Java 9 correctly recognising and
responding to my 125% text size in Accessibility Settings. I went ahead
and sized everything up just a bit. I think it looks nicer.